# ArkoseRenderer

./: .clang-format  .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFiles.sh  LICENSE  README.md  RunAssetCooker.bat
.github/workflows/: CI.yml  cmake-multi-platform.yml
arkcore/: CMakeLists.txt
arkcore/asset/: AnimationAsset.cpp  AnimationAsset.h  Asset.h  AssetCache.h  HairAsset.cpp  HairAsset.h  ImageAsset.cpp  ImageAsset.h  LevelAsset.cpp  LevelAsset.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  SerialisationHelpers.h  SetAsset.cpp  SetAsset.h  SkeletonAsset.cpp  SkeletonAsset.h  TextureCompressor.cpp  TextureCompressor.h
arkcore/core/: Assert.cpp  Assert.h  CommandLine.cpp  CommandLine.h  Logging.cpp  Logging.h  Types.h
arkcore/physics/: MotionType.h  PhysicsMesh.h
arkcore/rendering/: BlendMode.h  Brdf.h  ImageFilter.h  ImageWrapMode.h  Vertex.h  VertexAllocation.h
arkcore/scene/: Transform.cpp  Transform.h  Vertex.cpp
arkcore/system/: Input.h  System.h
arkcore/utility/: CommandLine.cpp  EnumHelpers.h  Extent.h  FileDialog.cpp  FileDialog.h  FileIO.cpp  FileIO.h  ParseContext.cpp  ParseContext.h  Profiling.h  StringHelpers.h  ToolUtilities.h
arklib/: CMakeLists.txt
arklib/include/ark/: aabb.h  badge.h  color.h  copying.h  core.h  debugger.h  handle.h  material.h  matrix.h  quaternion.h  random.h  spd.h  transform.h  vector.h
arklib/tests/: CMakeLists.txt  basic_usage.cpp
arkose/: Arkose.natvis  CMakeLists.txt  main.cpp  settings.h
arkose/animation/: Animation.cpp  Animation.h
arkose/application/: Arkose.cpp  Arkose.h
arkose/apps/: App.h  BootstrappingApp.cpp  BootstrappingApp.h  MeshViewerApp.cpp  MeshViewerApp.h  SSSDemo.cpp  SSSDemo.h  ShowcaseApp.cpp  ShowcaseApp.h
arkose/asset/: .gitignore  AnimationAsset.cpp  AnimationAsset.h  AssetCache.h  AssetHelpers.cpp  AssetHelpers.h  AssetImporter.cpp  AssetImporter.h  AssetTypes.h  AssetTypes.inl  CommonTypes.fbs  ImageAsset.cpp  ImageAsset.fbs  ImageAsset.h  LevelAsset.cpp  LevelAsset.fbs  LevelAsset.h  MaterialAsset.cpp  MaterialAsset.fbs  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  SerialisationHelpers.h  SkeletonAsset.cpp  SkeletonAsset.h  StaticMeshAsset.cpp  StaticMeshAsset.fbs  StaticMeshAsset.h  TextureCompressor.cpp  TextureCompressor.h
arkose/core/: Assert.h  Badge.h  Conversion.h  Handle.h  Logging.h  NonCopyable.h  Types.h
arkose/math/: Fibonacci.cpp  Fibonacci.h  Halton.h  Plane.h
arkose/pack/: Arkblob.cpp  Arkblob.h  TextureCompressor.cpp  TextureCompressor.h
arkose/physics/: HandleTypes.h  PhysicsMaterial.h  PhysicsScene.cpp  PhysicsScene.h
arkose/rendering/: App.h  AppState.h  BlendMode.h  DrawKey.cpp  DrawKey.h  Drawable.h  GpuScene.cpp  GpuScene.h  HairMesh.cpp  HairMesh.h  Icon.cpp  Icon.h  IconManager.cpp  IconManager.h  ImageFilter.h  ImageWrapMode.h  Material.cpp  Material.h  MorphTarget.cpp  MorphTarget.h  Registry.cpp  Registry.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelineNode.cpp  RenderPipelineNode.h  ResourceList.h  SkeletalMesh.cpp  SkeletalMesh.h  Skeleton.cpp  Skeleton.h  Sprite.cpp  Sprite.h  StaticMesh.cpp  StaticMesh.h  UpscalingParameters.h  VertexManager.cpp  VertexManager.h
arkose/scene/: EditorGizmo.cpp  EditorGizmo.h  EnvironmentMap.h  HairInstance.cpp  HairInstance.h  Material.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  Model.h  ProbeGrid.cpp  ProbeGrid.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  SceneObject.h  Transform.cpp  Transform.h  Vertex.h
arkose/shaders/: common.glsl
arkose/system/: Gamepad.h  Input.cpp  Input.h  InputAction.h  System.cpp  System.h
arkose/utility/: AvgAccumulator.h  AvgElapsedTimer.cpp  Extent.h  FileDialog.cpp  FileDialog.h  FileIO.cpp  FileIO.h  Hash.h  IESProfile.cpp  IESProfile.h  Image.cpp  Image.h  Input.cpp  Input.h  Profiling.h
assets/: identity.cube
assets/imported/: .gitignore
assets/sample/: .gitignore  CornellBox.arklvl  Sponza.arklvl  cornell-box.json  sponza.json
cmake/: FindShaderc.cmake  FindSpirvCross.cmake  FindUSD.cmake  FindVulkan.cmake
shaders/: common.glsl
shaders/bloom/: blend.comp  downsample.comp  upsample.comp
shaders/common/: aces.glsl  averageAccum.comp  brdf.glsl  camera.glsl  debugPrint.glsl  filmGrain.glsl  gBuffer.glsl  half.glsl  hlsl-on-glsl.glsl  iesProfile.glsl  intersections.glsl  lighting.glsl  namedUniforms.glsl  octahedral.glsl  rayTracing.glsl  sampling.glsl  sh.glsl  shadow.glsl  spherical.glsl  srgb.glsl
shaders/compose/: compose-gi.comp
shaders/culling/: culling.comp
shaders/ddgi/: common.glsl  default.rchit  masked.rahit  miss.rmiss  probeBorderCopyCorners.comp  probeBorderCopyEdges.comp  probeDebug.frag  probeDebug.vert  probeSampling.glsl  probeUpdateIrradiance.comp  probeUpdateOffset.comp  probeUpdateVisibility.comp  raygen.rgen
shaders/debug/: debugDraw.frag  debugDraw.vert
shaders/depth-of-field/: calculateCoc.comp
shaders/diffuse-gi/: filterDistances.comp  filterIrradiance.comp  forward.frag  forward.vert  probe-debug.frag  probe-debug.vert  probeSampling.glsl
shaders/effects/: water.glsl
shaders/final/: finalPostFx.frag  finalPostFx.vert  multisampled.frag  multisampled.vert  postprocessing.frag  simple.frag  with-filmgrain.frag
shaders/forward/: debug.frag  debug.vert  forward.frag  forward.vert  forwardSlow.frag  forwardSlow.vert  prepass.vert
shaders/fxaa/: anti-alias.comp  anti-alias.frag  fxaa.frag
shaders/gpgpu/: brokerQueue.glsl  rangeProcessor.glsl
shaders/meshlet/: culling.comp  meshletVisualizeSimple.frag  prepareIndirectArgs.comp
shaders/picking/: collectIndex.comp  drawIndices.frag  drawIndices.vert
shaders/post/: expose.comp  (+3 more)
src/: app-selector.h  main.cpp
tools/: ArkAssetBakeTool.cpp  CMakeLists.txt  CopyFileTool.cpp  GltfImportTool.cpp  HairImportTool.cpp  IESConvertTool.cpp  ImgAssetBakeTool.cpp  ShaderCompilerTool.cpp
tools/assetprocessor/: AssetIdentifier.h  AssetProcessor.cpp  AssetProcessor.h
tools/assetprocessor/sample/: main.cpp
tools/usd/: CMakeLists.txt  UsdImportTool.cpp
tools/usd/assetprocessor/sample/: main.cpp
(+908 files in other folders)
